refactor: wow2
